Week 05. Multi Screen App & Menus

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="donateButton">Donate</string>
     <string name="paypal">PayPal</string>
     <string name="direct">Direct</string>
+    <string name="menuReport">Report</string>
 </resources>
