Week 07. Donation Object Model

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="menuReport">Report</string>
     <string name="reportTitle">Report</string>
     <string name="menuDonate">Donate</string>
+    <string name="defaultAmount">00</string>
+    <string name="defaultMethod">N/A</string>
 </resources>
