--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="donateButton">Donate</string>
     <string name="paypal">PayPal</string>
     <string name="direct">Direct</string>
+    <string name="amount">Amount</string>
+    <string name="total">Total so Far</string>
+    <string name="totalSoFar">$ Total</string>
     <string name="menuReport">Report</string>
     <string name="reportTitle">Report</string>
     <string name="menuDonate">Donate</string>
